Fixed Page body padding; special treatment of covers in Issue index

--- a/Website Generator/OtherContent/css/customizations.css
+++ b/Website Generator/OtherContent/css/customizations.css
@@ -1,5 +1,5 @@
 body { padding-top: 70px; }
 .btn-page { padding-right: 20px; padding-left: 20px; }
 .breadcrumb { margin-top: 4px; margin-bottom: 0px; }
-.page-body { padding-top: 60px !important; }
+.page-body { padding-top: 50px !important; }
 .no-padding { padding: 0px; }
